tests/checker/ok/unit_receiver_free_function.can
assistantMessage = (Unit) => String {
    "hello"
}

Unit => Program {
    Unit
        .assistantMessage()
        -> Print
}
