tests/checker/fail/union_dispatch_nonexhaustive.can
Unit => Program {
    True() -> (
        * True => Unit { "yes" -> Print }
    )
}
